@@ -18,16 +18,12 @@
     02110-1301 USA, or see the FSF site: http://www.fsf.org.
 
 -->
-<project
-   xmlns="http://maven.apache.org/POM/4.0.0"
-   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
       <groupId>org.exoplatform.core</groupId>
       <artifactId>core-parent</artifactId>
-      <version>2.4.0-Beta01-SNAPSHOT</version>
+      <version>2.4.8-GA-SNAPSHOT</version>
    </parent>
    <artifactId>exo.core.component.organization.api</artifactId>
    <name>eXo Core :: Component :: Organization Service API</name>
@@ -40,6 +36,10 @@
       <dependency>
          <groupId>org.exoplatform.kernel</groupId>
          <artifactId>exo.kernel.commons</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.exoplatform.kernel</groupId>
+         <artifactId>exo.kernel.commons.test</artifactId>
       </dependency>
       <dependency>
          <groupId>org.exoplatform.kernel</groupId>
@@ -95,39 +95,29 @@
       <plugins>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+               <argLine>${env.MAVEN_OPTS} -Djava.security.manager=org.exoplatform.commons.test.TestSecurityManager -Djava.security.policy=${project.build.directory}/test-classes/test.policy</argLine>
+            </configuration>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-antrun-plugin</artifactId>
             <executions>
                <execution>
                   <phase>compile</phase>
                   <configuration>
                      <tasks>
-                        <taskdef
-                           name="hibernatedoclet"
-                           classname="xdoclet.modules.hibernate.HibernateDocletTask"
-                           classpathref="maven.dependency.classpath" />
-                        <hibernatedoclet
-                           destdir="${basedir}/target/classes"
-                           excludedtags="@version,@author,@todo"
-                           mergedir="target/classes"
-                           force="true"
-                           verbose="false"
-                        >
-                           <fileset
-                              dir="${basedir}/src/main/java"
-                           >
-                              <include
-                                 name="org/exoplatform/services/organization/impl/UserImpl.java" />
-                              <include
-                                 name="org/exoplatform/services/organization/impl/MembershipImpl.java" />
-                              <include
-                                 name="org/exoplatform/services/organization/impl/GroupImpl.java" />
-                              <include
-                                 name="org/exoplatform/services/organization/impl/MembershipTypeImpl.java" />
-                              <include
-                                 name="org/exoplatform/services/organization/impl/UserProfileData.java" />
+                        <taskdef name="hibernatedoclet" classname="xdoclet.modules.hibernate.HibernateDocletTask" classpathref="maven.dependency.classpath" />
+                        <hibernatedoclet destdir="${basedir}/target/classes" excludedtags="@version,@author,@todo" mergedir="target/classes" force="true" verbose="false">
+                           <fileset dir="${basedir}/src/main/java">
+                              <include name="org/exoplatform/services/organization/impl/UserImpl.java" />
+                              <include name="org/exoplatform/services/organization/impl/MembershipImpl.java" />
+                              <include name="org/exoplatform/services/organization/impl/GroupImpl.java" />
+                              <include name="org/exoplatform/services/organization/impl/MembershipTypeImpl.java" />
+                              <include name="org/exoplatform/services/organization/impl/UserProfileData.java" />
                            </fileset>
-                           <hibernate
-                              version="3.0" />
+                           <hibernate version="3.0" />
                         </hibernatedoclet>
                      </tasks>
                   </configuration>
@@ -135,7 +125,39 @@
                      <goal>run</goal>
                   </goals>
                </execution>
+               <execution>
+                  <id>prepare-test-policy</id>
+                  <phase>process-test-resources</phase>
+                  <configuration>
+                     <tasks>
+                        <echo>Creating Access Policy for tests</echo>
+                        <makeurl file="${settings.localRepository}" property="localRepositoryURL" />
+                        <makeurl file="${project.build.outputDirectory}" property="outputDirectoryURL" />
+                        <makeurl file="${project.build.testOutputDirectory}" property="testOutputDirectoryURL" />
+                        <copy todir="${project.build.testOutputDirectory}" overwrite="true">
+                           <fileset dir="${project.basedir}/src/test/resources/">
+                              <include name="test.policy" />
+                           </fileset>
+                           <filterset>
+                              <filter token="MAVEN_REPO" value="${localRepositoryURL}" />
+                              <filter token="MAIN_CLASSES" value="${outputDirectoryURL}" />
+                              <filter token="TEST_CLASSES" value="${testOutputDirectoryURL}" />
+                           </filterset>
+                        </copy>
+                     </tasks>                     
+                  </configuration>
+                  <goals>
+                     <goal>run</goal>
+                  </goals>
+               </execution>
             </executions>
+            <dependencies>
+               <dependency>
+                  <groupId>ant</groupId>
+                  <artifactId>ant-optional</artifactId>
+                  <version>1.5.3-1</version>
+               </dependency>
+            </dependencies>
          </plugin>
       </plugins>
    </build>
